# football-arbfinder

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  context.md  download_data.py  pyproject.toml
.claude/commands/: backtest.md  experiment.md  new-strategy.md  plot.md
.github/workflows/: ci.yml
docs/: METHODOLOGY.md
docs/results/: best_league.json  epl_baseline.json  league_scan.json  oos_clv.json  oos_summary.json  walkforward.json  walkforward_summary.json
fixtures/: recorded_odds.jsonl
results/: last_backtest.json
scripts/: reproduce.sh
src/arbfinder/: __init__.py  agent.py  arbitrage.py  backfill.py  backtest.py  cli.py  detector.py  diagnostics.py  fair_probability.py  leaguescan.py  models.py  normalize.py  oos.py  pinnacle.py  plotting.py  recorder.py  results.py  validation.py
src/arbfinder/providers/: __init__.py  base.py  footballdata.py  mock.py  theoddsapi.py
src/arbfinder/strategies/: __init__.py  arbitrage.py  base.py  registry.py  value.py
tests/: test_agent.py  test_backfill.py  test_backtest_verdict.py  test_cli.py  test_detector.py  test_diagnostics.py  test_download_data.py  test_fair_probability.py  test_footballdata.py  test_leaguescan.py  test_models.py  test_normalize.py  test_oos.py  test_pinnacle.py  test_providers.py  test_recorder.py  test_results.py  test_review_hardening.py  test_strategy.py  test_validation.py  test_value_backtest.py  test_value_hardening.py  test_value_strategy.py
tests/data/: footballdata_pinnacle_sample.csv  footballdata_sample.csv
tests/data/leagues/: D2.csv  E1.csv  E2_noPS.csv
tests/data/oos/: MM_hold.csv  MM_train.csv  NN_hold.csv  NN_train.csv  TT_hold.csv  TT_train.csv
tests/data/walkforward/: CC_2021.csv  CC_2122.csv  CC_2223.csv  CC_2324.csv  CC_2425.csv  WW_2021.csv  WW_2122.csv  WW_2223.csv  WW_2324.csv  WW_2425.csv
