[project]
name = "arbfinder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
plot = ["matplotlib>=3.7"]
fuzzy = ["rapidfuzz>=3.0"]
live = ["requests>=2.31"]            # nur fuer den echten Odds-API-Provider noetig
agent = ["apscheduler>=3.10"]        # nur fuer den periodischen Agent noetig

[project.scripts]
arbfinder = "arbfinder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
